--- a/HRHub-API/appsettings.json
+++ b/HRHub-API/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "HRHubConnectionProd": "Server=(localdb)\\mssqllocaldb;Database=HRHub;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HRHub;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
+
+
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,3 +14,4 @@
   },
   "AllowedHosts": "*"
 }
+ 
